# roulette

./: .gitignore  Dockerfile  Makefile  README.md  deploy.yml  docker-compose.yml  inventory.ini  local.def.env  pyproject.toml  requirements.txt  server.py
.github/workflows/: cd.yml  ci.yml
back/: __init__.py  room_registry.py
back/interfaces/: __init__.py  room_registry.py
cli/: __init__.py
cli/tests/: __init__.py  test_room_registry.py
src/: __init__.py
src/back/: dependencies.py  gun.py  io.py  main.py  room.py  room_registry.py  router.py  server.py
src/back/containers/: __init__.py  application.py
src/back/handlers/: __init__.py  create_room.py  delete_room.py  handlers.py  join_room.py  leave_room.py  list_room_handler.py  ping.py  routing.py
src/back/interfaces/: connection_registry.py  gun.py  handlers.py  io.py  message.py  room.py  room_registry.py  router.py
src/back/message/: __init__.py  create_room.py  delete_room.py  join_room.py  leave_room.py  list_room.py  ping.py  room.py
src/back/notifier/: __init__.py  notifier.py
src/cli/: client.py  main.py
src/settings/: __init__.py  settings.py
tests/: __init__.py  conftest.py
tests/back/: __init__.py  test_connection.py  test_gun.py  test_handlers.py  test_io.py  test_main.py  test_notifier.py  test_room_registry.py  test_server.py
tests/back/fake/: __init__.py  io.py  notification.py  room.py
tests/back/test_handlers/: __init__.py  test_create_room.py  test_join_room.py  test_leave_room.py  test_list_rooms.py  test_routing.py
tests/cli/: __init__.py  test_client.py
(+4 files in other folders)
