[tool.poetry]
name = "roulette"
version = "0.0.1"
description = "A LEGENDARY Russian Roulette game for EPIC gamers who are willing to RISK IT ALL"
authors = ["Fedyaev Daniil <daniil@maddevs.io>"]
readme = "README.md"
repository = "https://github.com/WinterCitizen/roulette"
packages = [
    { include = "back" },
    { include = "cli" },
]

[tool.poetry.dependencies]
python = "^3.11"
tornado = "^6.3.2"
msgpack = "^1.0.5"
pydantic = "^1.10.9"
python-dotenv = "^1.0.0"

[tool.poetry.scripts]
roulette = "cli.run:main"

[tool.poetry.group.qa.dependencies]
ruff = "^0.0.278"
mypy = "^1.4.1"
msgpack-types = "^0.2.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"


[tool.poetry.group.local.dependencies]
ipdb = "^0.13.13"
ipython = "^8.14.0"

[tool.ruff]
select = ["ALL"]
ignore = [
    "D203",
    "D213",
    "S101",
    "ARG002",
    "ANN102",
]
line-length = 120

[tool.coverage.report]
exclude_lines = [
    "raise NotImplementedError",
    "if TYPE_CHECKING",
    "if __name__",
    "async def main",
    "pragma: no cover",
    "import",
    "Settings",
]
fail_under = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
